--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
                 android:textColor="#fff"
                 android:layout_width="383dp"
                 android:layout_height="wrap_content"
-                android:text="热修复tinker联系"/>
+                android:text="retrofit+rxjava+okhttp"/>
 
         </LinearLayout>
     </ScrollView>
