--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,30 @@
                 android:layout_height="wrap_content"
                 android:text="retrofit+rxjava+okhttp"/>
 
+            <TextView
+                android:id="@+id/smartRefresh"
+                android:layout_marginTop="2dp"
+                android:padding="5dp"
+                android:background="@android:color/black"
+                android:gravity="center"
+                android:textSize="17sp"
+                android:textColor="#fff"
+                android:layout_width="383dp"
+                android:layout_height="wrap_content"
+                android:text="smartRefresh"/>
+
+            <TextView
+                android:id="@+id/TagCloudView"
+                android:layout_marginTop="2dp"
+                android:padding="5dp"
+                android:background="@android:color/black"
+                android:gravity="center"
+                android:textSize="17sp"
+                android:textColor="#fff"
+                android:layout_width="383dp"
+                android:layout_height="wrap_content"
+                android:text="炫酷的自定义翻滚View TagCloudView"/>
+
         </LinearLayout>
     </ScrollView>
 
